--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "BypassBot",
   "version": "0.0.1",
   "description": "An EvilBot by EvilChain",
-  "main": "bot.js",
+  "main": "bypassbot.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
