--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BypassBot",
+  "name": "bypassbot",
   "version": "0.0.1",
   "description": "An EvilBot by EvilChain",
   "main": "bypassbot.js",
